@@ -69,6 +69,10 @@ rm -fr %{buildroot}
 
 
 %changelog
+* Fri Nov 26 2004 Daniel Veillard <veillard@redhat.com> 0.0.18-1
+- still chasing the loop bug, checked and cleaned up all GList use
+- patch from markmc to minimize load on busy apps
+
 * Wed Oct 20 2004 Daniel Veillard <veillard@redhat.com> 0.0.16-1
 - chasing #132354, lot of debugging, checking and testing and a bit
   of refactoring
